fix image overflow bug

--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -19,11 +19,14 @@ img {
   margin-bottom: 1.5rem;
   -o-object-fit: contain;
   object-fit: contain;
+  width: auto;
+  height: auto;
   max-height: 90px;
+  /* max-height: 100%; */
+  max-width: 100%;
   font-weight: bold;
   font-size: 22pt;
   line-height: 1.5rem;
-
 }
 
 .container {
